Fix CSS formatting and correct text alignment

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav a{text-align:center}
 .box {
 text-align:center;
 background-color:#fbf1f1;
-height:100px;
+height:auto;
 font-size:20px;
 font-family:Audiowide;
 
